all user working

--- a/index.hbs
+++ b/index.hbs
@@ -214,7 +214,10 @@
                 <span class="menu-title">Add Sale/User</span>
                 <i class="mdi mdi-account-multiple menu-icon"></i>
               </a>
-              
+              <a class="nav-link" href="/admin/adds-addu/allusers">
+                <span class="menu-title">All Users</span>
+                <i class="mdi mdi-account-multiple menu-icon"></i>
+              </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
